adiciona roteamento com React Router e reorganiza estrutura de componentes

--- a/src/pages/Home/styles.css
+++ b/src/pages/Home/styles.css
@@ -1,7 +1,7 @@
-@layer home {
+@import '../../layer.css';
+@layer page {
   .hero {
     position: relative;
-
     img#hero-bg {
       position: absolute;
       top: 0;
