--- a/src/Components/Card/styles.css
+++ b/src/Components/Card/styles.css
@@ -1,4 +1,5 @@
-@layer card {
+@import '../../layer.css';
+@layer components {
   .container {
     background-color: var(--base-card);
     padding: 0 20px 20px;
