--- a/src/Components/Header/styles.css
+++ b/src/Components/Header/styles.css
@@ -45,10 +45,9 @@
     }
 
     span {
-      font-size: 1.25rem;
-      line-height: 130%;
-      font-weight: 700;
-      font-weight: bold;
+      font-size: 1rem;
+      line-height: 1;
+      font-weight: normal;
       color: var(--white);
       background-color: var(--yellow-dark);
       border-radius: 50%;
